--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "files.associations": {
-        "typeinfo": "c"
-    }
+    "pieces.cloudCapabilities": "Blended",
+    "pieces.telemetry": true
 }
